services/rsc/traefik/tests/externalIPs.yaml
# Do not test traefik, but using externalIPs to reuse admin vip to expose services

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vip-svc
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vip-svc
  template:
    metadata:
      labels:
        app: vip-svc
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: svc-vip-svc
  namespace: default
  annotations:
    kube-vip.io/loadbalancerIPs: 192.168.14.1
    kube-vip.io/vipHost: "svc.lab.ln"
  labels:
    implementation: kube-vip
spec:
  type: LoadBalancer
  selector:
    app: vip-svc
  ports:
    - port: 80
      targetPort: 80
  loadBalancerIP: 192.168.14.1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vip-admin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vip-admin
  template:
    metadata:
      labels:
        app: vip-admin
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: svc-vip-admin
  namespace: default
spec:
  selector:
    app: vip-admin
  ports:
    - port: 80
      targetPort: 80
  externalIPs:
    - 192.168.11.1
# curl -k https://k8s.lab.ln:6443/healthz
# curl http://k8s.lab.ln
# curl http://svc.lab.ln
