services/rsc/traefik/tests/ServicesTest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-test
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-test
  template:
    metadata:
      labels:
        app: svc-test
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: svc-test-svc
  namespace: default
spec:
  selector:
    app: svc-test
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: svc-test-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`svc.lab.ln`)
      kind: Rule
      services:
        - name: svc-test-svc
          port: 80
  tls: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-admin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-admin
  template:
    metadata:
      labels:
        app: svc-admin
    spec:
      containers:
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: svc-admin-svc
  namespace: default
spec:
  selector:
    app: svc-admin
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: svc-admin-ingress
  namespace: default
spec:
  entryPoints:
    - https-admin
  routes:
    - match: Host(`k8s.lab.ln`)
      kind: Rule
      services:
        - name: svc-admin-svc
          port: 80
  tls: {}
